--- a/ONLINEAPP.API/Web.config
+++ b/ONLINEAPP.API/Web.config
@@ -50,6 +50,8 @@
     <add key="ErrorLogPath" value="" />
     <add key="limitforNIC" value="2" />
     <add key="limitforBRN" value="3" />
+    <add key="NAFUserName" value="atisht@frci.net" />
+    <add key="NAFPassword" value="m@upassAdmin1" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
