Update API to insert generic eservices

--- a/ONLINEAPP.API/Web.config
+++ b/ONLINEAPP.API/Web.config
@@ -13,9 +13,11 @@
     <logmailformat emailsubjectforexception="UAT-WEBAPP WEB API Exception" emailbodyforexception="Hello Team,&lt;br/&gt;&lt;br/&gt;Exception occurred in WEBAPP Portal.&lt;br/&gt;&lt;br/&gt;UserName : {0}&lt;br/&gt;&lt;br/&gt;Method Name : {1}&lt;br/&gt;&lt;br/&gt;Exception Message : {2}&lt;br/&gt;&lt;br/&gt;Message : {3}&lt;br/&gt;&lt;br/&gt;Stack Trace : {4}&lt;br/&gt;&lt;br/&gt;Inner Exception : {5}&lt;br/&gt;" />
     <domain name="ETERNUS" />
   </bal.loggerandmailer>
-  <connectionStrings />
+  <connectionStrings>
+    <add name="MauritiusDBEservices" connectionString="Server=GVP-STG-DB19;Database=Mauritius_Eservices;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
-    <add key="EServiceUrl" value="http://iw:8007/" />
+    <add key="EServiceUrl" value="http://gvp-stg-app19:8007/" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
