--- a/ONLINEAPP.GENERIC.BL/App.Config
+++ b/ONLINEAPP.GENERIC.BL/App.Config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Test" connectionString="Data Source=localhost;Initial Catalog=Mauritius_Eservices;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MauritiusDBEservices" connectionString="Data Source=localhost;192.168.5.54 Catalog=Mauritius_Eservices;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
